<resources>
    <string name="app_name">CloudActivity6</string>
    <string name="home_fragment">Home fragment</string>
    <string name="java_fragment">Java fragment</string>
    <string name="android_fragment">Android fragment</string>
    <string name="php_fragment">Php fragment</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_text_file">Upload Text File</string>
    <string name="text_file">Text File</string>
    <string name="image_upload_and_download">Image upload and download</string>
    <string name="file_upload_and_download">File upload and download</string>
    <string name="text_upload_and_download">Text upload and download</string>
    <string name="download_image">Download Image</string>
    <string name="download_text_file">Download Text File</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="upload_text">Upload Text</string>
    <string name="download_text">Download Text</string>
    <string name="student_id">Student ID: A00237487</string>
    <string name="type_text_here">Type text here</string>
</resources>