<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:text="@string/student_id"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:text="@string/text_upload_and_download" />

        <EditText
            android:id="@+id/uploadTextET"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/type_text_here"
            android:inputType="textMultiLine"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/uploadBT"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/upload_text" />

        <Button
            android:id="@+id/downloadBT"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/download_text" />

        <TextView
            android:id="@+id/downloadedTextTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>