<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/student_id"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/image_upload_and_download" />

        <ImageView
            android:id="@+id/uploadIV"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@android:drawable/ic_menu_gallery" />

        <Button
            android:id="@+id/uploadBT"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/upload_image" />

        <Button
            android:id="@+id/downloadBT"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/download_image" />

        <ImageView
            android:id="@+id/downloadIV"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@android:drawable/ic_menu_gallery" />

    </LinearLayout>

</ScrollView>